controller/tests/integration/controller/testdata/httpfilterpolicy/default.yml
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: default
    namespace: default
  spec:
    gateways:
    - default
    hosts:
    - default.local
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: default
          port:
            number: 888
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: default
    namespace: default
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - default.local
      port:
        name: http
        number: 8888
        protocol: HTTP
