controller/tests/integration/controller/testdata/httpfilterpolicy/default_istio.yml
# This configuration is shared across different tests and should only contain minimal fields
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: default
    namespace: default
  spec:
    gateways:
    - default
    hosts:
    - default.local
    http:
    - match:
      - uri:
          prefix: /
      name: default
      route:
      - destination:
          host: default
          port:
            number: 888
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: default
    namespace: default
  spec:
    servers:
    - hosts:
      - default.local
      port:
        name: http
        number: 8888
        protocol: HTTP
