controller/tests/integration/controller/testdata/httpfilterpolicy/diff-envoyfilters.yml
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    namespace: istio-system
    name: not-from-htnn
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    namespace: istio-system
    name: htnn-h-default--httpbin # EnvoyFilter to remove
    labels:
      htnn.mosn.io/created-by: HTTPFilterPolicy
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    namespace: istio-system
    name: htnn-http-filter # EnvoyFilter to update
    labels:
      htnn.mosn.io/created-by: HTTPFilterPolicy
- apiVersion: mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: VirtualService
      name: vs
    filters:
      demo:
        config:
          host_name: goldfish
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: vs
    namespace: default
  spec:
    gateways:
    - default
    hosts:
    - default.local
    http:
    - match:
      - uri:
          prefix: /delay
      name: default
      route:
      - destination:
          host: httpbin
          port:
            number: 8000
