controller/tests/integration/controller/testdata/httpfilterpolicy/httpfilterpolicy_without_targetref.yml
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    filters:
      demo:
        config:
          hostName: Jack
