controller/tests/integration/controller/testdata/httpfilterpolicy/httproute.yml
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hr
    filters:
      demo:
        config:
          hostName: goldfish
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: hr
    namespace: default
  spec:
    parentRefs:
    - name: default
      namespace: istio-ingress # cross namespace is unsupported
    - name: default
      sectionName: default
      port: 8888
    - name: default
      sectionName: default2
      port: 8889
    hostnames:
      - default.local
    rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: default
        port: 8000
