controller/tests/integration/controller/testdata/httpfilterpolicy/istio_gateway.yml
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: gw
    namespace: default
  spec:
    servers:
    - hosts:
      - '*'
      port:
        name: http
        number: 8989
        protocol: HTTP
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: unsupported
    namespace: default
  spec:
    servers:
    - hosts:
      - '*'
      port:
        name: mongo
        number: 8990
        protocol: MONGO
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: Gateway
      name: gw
    filters:
      demo:
        config:
          hostName: goldfish
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy2
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: Gateway
      name: notfound
    filters:
      demo:
        config:
          hostName: goldfish
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy3
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: Gateway
      name: unsupported
    filters:
      demo:
        config:
          hostName: goldfish
