controller/tests/integration/controller/testdata/httpfilterpolicy/istio_gateway_embedded_hfp.yml
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: default-embedded
    namespace: default
    annotations:
      htnn.mosn.io/httpfilterpolicy: |
        {"apiVersion":"htnn.mosn.io/v1","kind":"HTTPFilterPolicy","metadata":{"name":"policy","namespace":"default"},"spec":{"filters":{"demo":{"config":{"hostName":"peter"}}}}}
  spec:
    servers:
    - hosts:
      - default.local
      port:
        name: http
        number: 8889
        protocol: HTTP
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: vs
    namespace: default
  spec:
    gateways:
    - default-embedded
    hosts:
    - default.local
    http:
    - match:
      - uri:
          prefix: /
      name: route
      route:
      - destination:
          host: httpbin
          port:
            number: 8000
