controller/tests/integration/controller/testdata/httpfilterpolicy/istio_gateway_via_port.yml
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: Gateway
      name: gw
      sectionName: http
    filters:
      limitReq:
        config:
          average: 1
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy2
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: Gateway
      name: gw
    filters:
      demo:
        config:
          hostName: someone
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: not-found
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: Gateway
      name: gw
      sectionName: not-found
    filters:
      demo:
        config:
          hostName: me
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: gw
    namespace: default
  spec:
    servers:
    - hosts:
      - '*'
      name: http
      port:
        name: port-http
        number: 80
        protocol: HTTP
    - hosts:
      - '*'
      name: http2
      port:
        name: port-http2
        number: 8080
        protocol: HTTP
