controller/tests/integration/controller/testdata/httpfilterpolicy/valid-httpfilterpolicy.yml
- apiVersion: mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: VirtualService
      name: vs
    filters:
      demo:
        config:
          host_name: Mary
