controller/tests/integration/controller/testdata/httpfilterpolicy/virtualservice_match_but_route_not.yml
- apiVersion: mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: match
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: VirtualService
      name: default
    filters:
      demo:
        config:
          host_name: goldfish
- apiVersion: mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: no-match
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: VirtualService
      name: default
      sectionName: not-exist
    filters:
      demo:
        config:
          host_name: goldfish
