controller/tests/integration/controller/testdata/httpfilterpolicy/virtualservice_subpolicies.yml
- apiVersion: htnn.mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: VirtualService
      name: vs
    subPolicies:
    - sectionName: route
      filters:
        demo:
          config:
            hostName: spacewander
    - sectionName: not-matched
      filters:
        demo:
          config:
            hostName: John Doe
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: vs
    namespace: default
  spec:
    gateways:
    - default
    hosts:
    - default.local
    http:
    - match:
      - uri:
          prefix: /
      name: route
      route:
      - destination:
          host: httpbin
          port:
            number: 8000
